[package]
name = "password-gen-rs"
version = "0.1.0"
authors = ["James Devlin <devlin.ja@husky.neu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
rand = "0.7.2"
